2014-03-25  Niels Möller  <nisse@lysator.liu.se>

	* testsuite/dsa-keygen-test.c (test_main): Do dsa_param cast once,
	and assign to variable.

	* dsa.h: Deleted old interface (moved to dsa-compat.h).
	(struct dsa_value): Deleted. Updated many files.

	* Makefile.in (hogweed_SOURCES): Add dsa-compat.c and
	dsa-compat-keygen.c, remove dsa-keygen-old.c.
	(HEADERS): Add dsa-compat.h.

	* dsa-compat.c: New file.
	* dsa-compat.h: New file. Include in corresponding C files.

	* dsa-compat-keygen.c: Renamed file, ...
	* dsa-keygen-old.c: ... old name.

2014-03-11  Niels Möller  <nisse@lysator.liu.se>

	* examples/hogweed-benchmark.c: Update dsa benchmarking to use new
	DSA interface.

	* dsa.h: Updated prototypes.

	* sexp2dsa.c (dsa_sha1_keypair_from_sexp)
	(dsa_sha256_keypair_from_sexp): Converted to new DSA interface.
	(dsa_keypair_from_sexp_alist): Converted to new DSA
	interface. Allow q_size == 0, meaning any q < p is allowed.
	Additional validity checks.

	* der2dsa.c (dsa_params_from_der_iterator): Likewise.
	(dsa_public_key_from_der_iterator): Converted to new DSA
	interface. Also check that the public value is in the correct
	range.
	(dsa_openssl_private_key_from_der_iterator): Converted
	to new DSA interface. Additional validity checks.
	(dsa_openssl_private_key_from_der): Converted to new DSA
	interface.

	* tools/pkcs1-conv.c (convert_dsa_private_key): Use new DSA
	interface.
	(convert_public_key): Likewise.

	* dsa2sexp.c (dsa_keypair_to_sexp): Converted to new DSA
	interface.

2014-03-09  Niels Möller  <nisse@lysator.liu.se>

	* Makefile.in (hogweed_SOURCES): Added dsa-gen-params.c and
	dsa-keygen-old.c.

	* testsuite/dsa-keygen-test.c (test_main): Updated to use
	dsa_generate_keypair_old.

	* dsa.h: Update declarations for key generation functions.

	* dsa-keygen.c (dsa_generate_keypair): New interface, generating
	only a keypair, and no new parameters.

	* dsa-keygen-old.c (dsa_generate_keypair_old): Implement old